# flagora_backend

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.production  README.md  bandit.yaml  makefile  manage.py  pyproject.toml  run_test.sh  utils.py
.github/workflows/: ci.yml
api/: admin.py  api.py  apps.py  auth.py  consumers.py  flag_store.py  game_registery.py  routing.py  schema.py  services.py  services_emails.py  utils.py
api/routes/: api.py  auth.py
api/services/: adaptive_learning_algorithm.py  emails.py  game.py  user_country_score.py  user_department_score.py
api/services/game_modes/: __init__.py  base_game.py  game_guess_capital_from_country.py  game_guess_capital_from_country_base.py  game_guess_country_from_flag.py  game_guess_country_from_flag_base.py  game_guess_department_from_number_base.py
api/tests/: test_adaptive_learning_algorithm.py  test_api.py  test_auth.py  test_department_gamemode.py  test_emails.py  test_flag_store.py  test_game_consumer.py  test_services_game.py  test_services_user_country_score.py  test_utils.py
core/: admin.py  apps.py  services.py  utils.py
core/management/commands/: generate_countries_json_backup.py  import_countries.py  import_countries_from_json.py  import_departments.py  update_countries.py
core/migrations/: 0001_initial.py  0002_alter_city_options_remove_country_capital_city_and_more.py  0002_user_is_email_verified_user_language.py  0003_alter_city_options_alter_country_options_and_more.py  0003_country_flag.py  0004_remove_city_name_native.py  0004_user_verification_uuid.py  0005_alter_city_capital_of_country.py  0005_alter_usercountryscore_user_guesses.py  0006_alter_usercountryscore_game_mode.py  0006_country_wikidata_id.py  0007_remove_city_capital_of_country_city_is_capital.py  0007_userstats.py  0008_userpreferencegamemode.py  0009_add_department_gamemodes.py  0009_city_wikipedia_link_en_city_wikipedia_link_fr_and_more.py  0010_add_default_wikipedia_links.py
core/models/: City.py  Country.py  Guess.py  User.py  UserCountryScore.py  __init__.py  city.py  country.py  department.py  guess.py  user.py  user_country_score.py  user_department_score.py  user_preference_game_mode.py  user_stats.py  wikipedia_link.py
core/services/: country_services.py  stats_sevices.py  user_services.py
core/tests/: factories.py  mocks.py  test_backup_countries.py  test_commands.py  test_country.py  test_country_update.py  test_import_countries.py  test_stats.py
docker/: entrypoint.sh
flagora/: api.py  asgi.py  backends.py  middleware.py  routes.py  settings.py  settings_test.py  urls.py  wsgi.py
flagora/tests/: base.py
templates/emails/: email_verify.html  email_verify.txt  reset_password.html  reset_password.txt  welcome.html  welcome.txt
(+12 files in other folders)
