[project]
name = "flagora-backend"
version = "0.1.0"
description = "Backend for the Flagora app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels-redis>=4.2.1",
    "channels[daphne]>=4.2.2",
    "django>=5.2",
    "django-anymail[brevo]>=13.0",
    "django-cors-headers>=4.7.0",
    "django-ninja>=1.4.1",
    "dotenv>=0.9.9",
    "pillow>=11.2.1",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "coverage>=7.9.2",
    "django-debug-toolbar>=6.1.0",
    "factory-boy>=3.3.3",
    "freezegun>=1.5.5",
    "pre-commit>=4.2.0",
    "ruff>=0.12.12",
]
production = [
    "whitenoise>=6.9.0",
]

[tool.coverage.run]
omit = [
    "*/.local/*",
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "manage.py",
    "__init__.py",
    "settings.py"
]

[tool.coverage.report]
skip_empty = true
omit = [
    "*/.local/*",
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "manage.py",
    "__init__.py",
    "settings.py"
]
exclude_also = [
    "def __repr__",
    "def __str__",
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "migrations"
]

[tool.autoflake]
imports = ["django", "requests", "urllib3"]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
